--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
 name: 'Notify team'
 description: 'Notify the team of any failed action'
-inputs: null
+inputs:
   webhook:
     description: 'Webhook to the meet channel'
     default: ${{ secrets.WEBHOOK_ALERTES_WEBAPPS }}
