--- a/action.yml
+++ b/action.yml
@@ -15,6 +15,12 @@ runs:
       shell: bash
       run: |
         echo MAAAMA MIIIAA
+        echo "webhookUrl: ${{ inputs.webhook }}"
+        echo "jobStatus: ${{ job.status }}"
+        echo "imageUrl: ${{ format('https://github.com/{0}.png', github.event.head_commit.author.username) }}"
+        echo "imageAltText: ${{ github.event.head_commit.author.name }}"
+        echo "subtitle: ${{ github.event.head_commit.message }}"
+        echo "title: ${{ format('{0} -- [{1}]', github.event.repository.name, github.event.ref) }}"
     - name: Google Chat Notificationa
       uses: SimonScholz/google-chat-action@main
       if: failure()
