--- a/action.yml
+++ b/action.yml
@@ -32,7 +32,7 @@ runs:
       id: infostep
       shell: bash
       run: |
-        echo "::set-output name=branch::${BRANCH##*/}"
+        echo "echo branch=${BRANCH##*/} >> $GITHUB_OUTPUT"
       env:
         BRANCH: ${{ github.event.ref }}
 
